val rrGroup: String by rootProject.extra
val rrVersion: String by rootProject.extra
val artifactName = "chat"

plugins {
    `java-library`
    `maven-publish`
}

group = rrGroup
version = rrVersion

dependencies {
    compileOnly(commonLibs.paper)
    compileOnly(commonLibs.spigot)
    compileOnly(commonLibs.acf)
    compileOnly(commonLibs.placeholderapi)
    compileOnly(commonLibs.configme)
    compileOnly(commonLibs.apachecommonslang)
    compileOnly(project(":Projects:Common"))
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
}

publishing {
    publications {
        create<MavenPublication>("maven") {
            groupId = rrGroup
            artifactId = artifactName
            version = rrVersion
            from(components["java"])
        }
    }
}